apps/infisical/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infisical
    namespace: nori-cloud
    labels:
        app: infisical
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infisical
    template:
        metadata:
            labels:
                app: infisical
        spec:
            containers:
                - name: infisical
                  image: infisical/infisical:v0.159.9
                  ports:
                      - containerPort: 8080
                        name: http
