apps/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: nori-cloud
  labels:
    app: infisical
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: infisical
  ports:
    - port: 80
      targetPort: 8080
      name: http
