apps/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical
  namespace: nori-cloud
  annotations:
    tailscale.com/hostname: infisical
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: infisical
      port:
        number: 8080
  tls:
    - hosts:
        - infisical
